Switched to Less from CSS, fixed RSS and Atom feeds, changed color scheme, added Google Analytics, wrote a few blog posts

--- a/forum/styles/prosilver/template/overall_header.html
+++ b/forum/styles/prosilver/template/overall_header.html
@@ -100,7 +100,8 @@
 	<link href="{T_THEME_PATH}/bidi.css" rel="stylesheet" type="text/css" media="screen, projection" />
 <!-- ENDIF -->
 
-<link rel="stylesheet" type="text/css" href="/style.css">
+<link rel="stylesheet/less" href="/style.less" type="text/css" /> 
+<script src="/less-1.0.35.min.js"></script>
 
 </head>
 
