Fix CC license, pare down header, add search box fix from Ben, tweak front page text, new front page image

--- a/forum/styles/prosilver/template/overall_footer.html
+++ b/forum/styles/prosilver/template/overall_footer.html
@@ -38,13 +38,12 @@
 		            <p>"He who receives an idea from me, receives instruction himself without lessening mine;<br>as he who lights his taper at mine, receives light without darkening me."<br>&ndash;Tom Jefferson</p>
 		        </div>
 		        <div id="bottombar">
-			        <div class="copyright">Powered by <a href="http://www.phpbb.com/">phpBB</a>
 					<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
 					<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
 					<!-- IF U_ACP --><br /><strong><a href="{U_ACP}">{L_ACP}</a></strong><!-- ENDIF -->
 					</div>
-		            Forum content under Creative Commons license CC-BY-SA <a href="http://rascalmicro.com">Rascal Micro</a> LLC
-		        <div>
+                    <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://creativecommons.org/images/public/somerights20.png" /></a><br />The posts in the forums are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>. The forum code runs on <a href="http://www.phpbb.com/">phpBB</a>, available under <a href="http://www.phpbb.com/downloads/license/">the GNU General Public License, version 2</a>.
+		        </div>
 		    </div>
 		</div>
 		
