--- a/style.less
+++ b/style.less
@@ -191,6 +191,13 @@ h4 {
     padding-top: 20px;
 }
 
+#search-box a {
+    bottom:-30px;
+    font-size:0.9em;
+    position:relative;
+    right:20px;
+}
+
 #wrap {
 	padding-top: 10px;
 	padding-left: 0;
