Fixed forum reply subject font size

--- a/style.less
+++ b/style.less
@@ -208,6 +208,10 @@ h4 {
     font-size: 0.875em;
 }
 
+#subject { /* TODO: want to make #message (reply textarea) font 14px like this too, but it gets overruled */
+    font-size: 14px;
+}
+
 .navbar, .forumbg, .forabg {
     background-color: @rascal-forum-bg;
 }
