Fixed text size in forum replies

--- a/style.less
+++ b/style.less
@@ -204,12 +204,8 @@ h4 {
 	padding-right: 0;
 }
 
-.postbody .content {
+.postbody .content, #message-box textarea, input.button1, input.button2 {
     font-size: 0.875em;
-}
-
-#subject { /* TODO: want to make #message (reply textarea) font 14px like this too, but it gets overruled */
-    font-size: 14px;
 }
 
 .navbar, .forumbg, .forabg {
