Reorganized front page, added mailchimp form

--- a/style.less
+++ b/style.less
@@ -63,14 +63,18 @@ body {
     text-align: right;
 }
 
-#lefttorso {
+#upperlefttorso, #lowerlefttorso {
     width: 450px;
     float: left;
 }
 
-#righttorso {
+#upperrighttorso, #lowerrighttorso {
     width: 450px;
     margin-left: 500px;
+}
+
+.twocolumnimage {
+    clear: both;
 }
 
 #bottomcontent, #bottombar {
