Improved email submission button

--- a/style.less
+++ b/style.less
@@ -104,6 +104,24 @@ img {
     margin-top: -20px;
 }
 
+#mc-embedded-subscribe {
+    background: url(/img/keep-me-posted.png) no-repeat;
+    cursor: pointer;
+    width: 179px;
+    height: 58px;
+    border: none;
+    vertical-align: top;
+}
+
+#mce-EMAIL {
+    width: 220px;
+    height: 30px;
+    font-family: "Molengo","URW Gothic L",sans-serif;
+    font-size: 1em;
+    vertical-align: top;
+    margin-top: 13px;
+}
+
 #righttorso img {
     border: 5px solid @rascal-gray;
     margin-left: -500px;
