Fix padding to line everything up

--- a/style.less
+++ b/style.less
@@ -87,8 +87,7 @@ body {
 
 #nav li {
     display: inline;
-    padding-left: 25px;
-    padding-right: 25px;
+    padding-left: 50px;
 }
 
 img {
@@ -102,6 +101,7 @@ img {
     height: 70px;
     border: none;
     margin-top: -20px;
+    margin-left: -9px;
 }
 
 #mc-embedded-subscribe {
@@ -129,6 +129,8 @@ img {
 
 p, .mc-field-group {
     padding: 10px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 ul, ol {
@@ -140,7 +142,6 @@ ul, ol {
 h1, h2, h3, h4, h5, h6 {
     font-family: "Trebuchet MS",Verdana,sans-serif;
     padding-top: 15px;
-    padding-left: 10px;
     font-weight: bold;
 }
 
