--- a/style.less
+++ b/style.less
@@ -283,5 +283,9 @@ ul.topiclist li.row:hover {
     padding-top: 10px;
 }
 
+.pygments_monokai {
+    padding-left: 5px;
+}
+
 /* end blogofile styles */
 
