Update meta info in headers

--- a/forum/styles/prosilver/template/overall_header.html
+++ b/forum/styles/prosilver/template/overall_header.html
@@ -3,6 +3,7 @@
 <head>
 
 <meta charset="{S_CONTENT_ENCODING}" />
+<meta name="description" content="Small computers for art and science" />
 {META}
 <title>{SITENAME} &bull; <!-- IF S_IN_MCP -->{L_MCP} &bull; <!-- ELSEIF S_IN_UCP -->{L_UCP} &bull; <!-- ENDIF -->{PAGE_TITLE}</title>
 
