Fix shade of red in links to match logo

--- a/style.less
+++ b/style.less
@@ -1,4 +1,4 @@
-@rascal-main: #CD2820;
+@rascal-main: #C6433C;
 @rascal-light: @rascal-main + #222;
 @rascal-extra-light: @rascal-main + #444;
 @rascal-dark: @rascal-main - #222;
