Add feeds and OSHW logo to footer, split into three columns

--- a/style.less
+++ b/style.less
@@ -73,8 +73,21 @@ body {
     clear: both;
 }
 
-#bottomcontent, #bottombar {
+#footerleft {
+    float: left;
+    width: 100px;
+}
+
+#footercenter {
+    float: left;
+    padding-left: 10px;
+    width: 650px;
+}
+
+#footerright {
+    float: right;
     text-align: center;
+    width: 190px;
 }
 
 #nav {
