Finish browser-server loop explanation, tweak inline code formatting

--- a/style.less
+++ b/style.less
@@ -105,6 +105,11 @@ img {
     margin-left: 0px;
 }
 
+code {
+    color: #272822; /* from pygments-monokai */
+    padding: 3px;
+}
+
 #rascallogo {
     clear: none;
     float: left;
