Add links to legal stuff in all the right places

--- a/forum/styles/prosilver/template/overall_footer.html
+++ b/forum/styles/prosilver/template/overall_footer.html
@@ -44,7 +44,7 @@
                         <div id="footercenter">
                             <p>"He who receives an idea from me, receives instruction himself without lessening mine; as he who lights his taper at mine, receives light without darkening me." &ndash; Tom Jefferson</p>
                             <p>The posts in the forums are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>. The forum runs on <a href="http://www.phpbb.com/">phpBB</a>, available under <a href="http://www.phpbb.com/downloads/license/">the GNU General Public License, version 2</a>.</p>
-                            <p><a href="http://rascalmicro.com/docs/privacy.html">Privacy policy</a></p>
+                            <p><a href="http://rascalmicro.com/docs/privacy.html">Privacy policy</a> | <a href="http://rascalmicro.com/docs/terms-of-use.html">Terms of use</a> | <a href="http://rascalmicro.com/docs/forum-rules.html">Forum rules</a></p>
                             <!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
         					<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
 		        			<!-- IF U_ACP --><br /><strong><a href="{U_ACP}">{L_ACP}</a></strong><!-- ENDIF -->
@@ -72,7 +72,7 @@
       })();
 
     </script>
-		<div>
+		<div id="phpbb-cron-thingy">
 			<a id="bottom" name="bottom" accesskey="z"></a>
 			<!-- IF not S_IS_BOT -->{RUN_CRON_TASK}<!-- ENDIF -->
 		</div>
