--- a/style.less
+++ b/style.less
@@ -253,7 +253,7 @@ dt a { /* links to authors' names */
     background-color: @rascal-forum-bg;
 }
 
-html, body { /* counteracting phpBB's attempt to force a vertical scroll bar */
+html, body, #phpbb-cron-thingy { /* counteracting phpBB's attempt to force a vertical scroll bar */
     height: 100%;
     background-color: @rascal-gray;
 }
