--- a/style.less
+++ b/style.less
@@ -350,3 +350,35 @@ ul.topiclist li.row:hover {
 }
 /* end Zurb awesome buttons */
 
+/* zebra striped tables (also uses jQuery to add classes) */
+
+.zebra {
+    font-size: 0.8em;
+    line-height: 2em;
+    border: 1px solid black;
+    border-collapse: collapse;
+    background-color: @rascal-gray;
+    color: @rascal-white;
+    font-family:'Courier', sans-serif;
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+
+td, th {
+    text-align: left;
+    padding: 7px;
+    border: 1px solid black;
+}
+
+th {
+    background-color: @rascal-main;
+    font-weight: normal;
+}
+
+tr.alt td {
+    background: #616263;
+}
+
+tr.over td {
+    color: #00ff00;
+}
