Shrink header and fix OSHW logo

--- a/forum/styles/prosilver/template/overall_footer.html
+++ b/forum/styles/prosilver/template/overall_footer.html
@@ -50,7 +50,7 @@
 		        			<!-- IF U_ACP --><br /><strong><a href="{U_ACP}">{L_ACP}</a></strong><!-- ENDIF -->
                         </div>
                         <div id="footerright">
-                            <img alt="Open Source Hardware logo" src="/img/oshw-logo-light.svg" width="190px" />
+                            <a href="http://rascalmicro.com/docs/sources.html"><img alt="Open Source Hardware logo" src="/img/oshw-logo-rascal-colors.png"/></a>
                         </div>
                     </div>
                 </div>
