Retheme forum, partially

--- a/forum/styles/prosilver/template/overall_footer.html
+++ b/forum/styles/prosilver/template/overall_footer.html
@@ -32,46 +32,54 @@
 		</div>
 		</div>
 		</div>
-		<div id="footer">
-		    <div class="rascalcontent">
-                <div id="bottomcontent">
-                    <div id="bottombar">
-                        <div id="footerleft">
+		
+		<footer>
+            <div class="fill">
+                <div class="container">
+                    <div class="row">
+                        <div class="span3">
                             <a href="/blog/feed/index.xml"><img alt="RSS icon" src="/img/rss-icon-32px.png"></a>
                             <a href="/blog/feed/atom/index.xml"><img alt="Atom icon" src="/img/atom-icon-32px.png"></a><br />
                             <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://creativecommons.org/images/public/somerights20.png" /></a>
                         </div>
-                        <div id="footercenter">
-                            <p>"He who receives an idea from me, receives instruction himself without lessening mine; as he who lights his taper at mine, receives light without darkening me." &ndash; Tom Jefferson</p>
+                        <div class="span10">
+                            <p>"He who receives an idea from me, receives instruction himself without lessening mine; as he who lights his taper at mine, receives light without darkening me." &mdash; Tom Jefferson</p>
                             <p>The posts in the forums are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>. The forum runs on <a href="http://www.phpbb.com/">phpBB</a>, available under <a href="http://www.phpbb.com/downloads/license/">the GNU General Public License, version 2</a>.</p>
-                            <p><a href="http://rascalmicro.com/docs/privacy.html">Privacy policy</a> | <a href="http://rascalmicro.com/docs/terms-of-use.html">Terms of use</a> | <a href="http://rascalmicro.com/docs/forum-rules.html">Forum rules</a></p>
+                            <p><a href="/docs/privacy.html">Privacy policy</a> | <a href="/docs/terms-of-use.html">Terms of use</a> | <a href="/docs/forum-rules.html">Forum rules</a></p>
                             <!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
         					<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
 		        			<!-- IF U_ACP --><br /><strong><a href="{U_ACP}">{L_ACP}</a></strong><!-- ENDIF -->
                         </div>
-                        <div id="footerright">
-                            <a href="http://rascalmicro.com/docs/sources.html"><img alt="Open Source Hardware logo" src="/img/oshw-logo-rascal-colors.png"/></a>
+                        <div class="span3">
+                            <a href="/docs/sources.html"><img alt="Open Source Hardware logo" src="/img/oshw-logo-outline-100x96px.png"/></a>
                         </div>
                     </div>
                 </div>
-		    </div>
-		</div>
-    <script type="text/javascript"> 
+            </div>
+            <script type="text/javascript">
+            $(document).ready(function(){
+                $(".zebra tr").mouseover(function(){$(this).addClass("over");
+                }).mouseout(function(){$(this).removeClass("over");});
+                $(".zebra tr:even").addClass("alt");
+            });
+            </script>
+            <script type="text/javascript">
 
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-96134-3']);
-      _gaq.push(['_trackPageview']);
+              var _gaq = _gaq || [];
+              _gaq.push(['_setAccount', 'UA-96134-3']);
+              _gaq.push(['_trackPageview']);
 
-      (function() {
-        var ga = document.createElement('script'); ga.type =
-    'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' :
-    'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(ga, s);
-      })();
+              (function() {
+                var ga = document.createElement('script'); ga.type =
+            'text/javascript'; ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' :
+            'http://www') + '.google-analytics.com/ga.js';
+                var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+              })();
 
-    </script>
+            </script>
+        </footer>
 		<div id="phpbb-cron-thingy">
 			<a id="bottom" name="bottom" accesskey="z"></a>
 			<!-- IF not S_IS_BOT -->{RUN_CRON_TASK}<!-- ENDIF -->
