Fix header link appearance

--- a/forum/styles/prosilver/template/overall_header.html
+++ b/forum/styles/prosilver/template/overall_header.html
@@ -105,7 +105,7 @@
     <div class="topbar">
         <div class="fill">
             <div class="container">
-                <a class="brand" href="/"><img src="/img/rm-logo-words-only-light.png" style="height:18px"></a>
+                <a class="brand" href="/"><img src="/img/rm-logo-words-only-light.png"></a>
                 <ul class="nav">
                     <li class="active"><a href="http://store.rascalmicro.com">Store</a></li>
                     <li><a href="/about.htm">About</a></li>
