--- a/less/rascal.less
+++ b/less/rascal.less
@@ -20,6 +20,20 @@ footer {
     color: @rascal-white;
 }
 
+.hero-unit {
+    padding-top: 75px;
+}
+
+ul.nav li a {
+    padding-top: 23px;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-bottom: 14px;
+    font-size: 20px;
+    line-height: 20px;
+    color: darken(@rascal-white, 15);
+}
+
 @white: @rascal-white;
 @linkColor: @rascal-red;
 
