First attempt at cycling content on front page

--- a/less/rascal.less
+++ b/less/rascal.less
@@ -22,6 +22,19 @@ footer {
 
 .hero-unit {
     padding-top: 75px;
+    padding-bottom: 0px;
+}
+
+.tabs {
+    border-bottom-width: 0px;
+}
+
+.tabs li a {
+    background: #ffffff url("/img/gray-dot-15px.png") no-repeat right top;
+}
+
+.tabs .active a {
+    background: #ffffff url("/img/red-dot-15px.png") no-repeat right top;
 }
 
 ul.nav li a {
