--- a/less/rascal.less
+++ b/less/rascal.less
@@ -25,18 +25,6 @@ footer {
     padding-bottom: 0px;
 }
 
-.tabs {
-    border-bottom-width: 0px;
-}
-
-.tabs li a {
-    background: #ffffff url("/img/gray-dot-15px.png") no-repeat right top;
-}
-
-.tabs .active a {
-    background: #ffffff url("/img/red-dot-15px.png") no-repeat right top;
-}
-
 ul.nav li a {
     padding-top: 23px;
     padding-right: 20px;
@@ -46,6 +34,44 @@ ul.nav li a {
     line-height: 20px;
     color: darken(@rascal-white, 15);
 }
+
+/* Cycle of 5 images on front page */
+
+.image {
+    position: relative;
+    width: 100%; /* for IE 6 */
+}
+
+#the-rascal {
+    position: absolute;
+    top: 10px;
+    width: 100%;
+}
+
+#bullet-strip {
+    position: absolute;
+    bottom: 10px;
+}
+
+.ring {
+    display: none;
+}
+
+.ring.active {
+    display: block;
+}
+
+.bullets {
+    cursor: default;
+}
+
+.bullets li {
+    list-style-type: none;
+    font-size: 40px;
+    display: inline;
+}
+
+/* End of front page stuff */
 
 @white: @rascal-white;
 @linkColor: @rascal-red;
@@ -65,6 +91,7 @@ code {
 }
 
 /* Enlarge the typography */
+
 @basefont: 16px;
 @baseline: 24px;
 
