Add contest blog post and fix blog layout up

--- a/less/rascal.less
+++ b/less/rascal.less
@@ -101,6 +101,18 @@ code {
   line-height: @baseline;
 }
 
+/* For blog posts */
+
+h6 {
+    line-height: 16px;
+    margin-bottom: 5px;
+}
+
+hr {
+    margin: 10px 0 9px;
+    border-bottom: 1px solid lighten(@rascal-gray, 35);
+}
+
 /* for phpBB */
 
 .postbody .content, #message-box textarea, input.button1, input.button2 {
