Fix up forum header, namespace some PHPBB class attributes that were overlapping with Twitter Bootstrap attributes

--- a/forum/styles/prosilver/template/overall_header.html
+++ b/forum/styles/prosilver/template/overall_header.html
@@ -102,7 +102,7 @@
 
 <body id="phpbb" class="section-{SCRIPT_NAME} {S_CONTENT_DIRECTION}">
 <div id="header">
-    <div class="topbar">
+    <div class="navbar">
         <div class="fill">
             <div class="container">
                 <a class="brand" href="/"><img src="/img/rm-logo-words-only-light.png"></a>
@@ -132,11 +132,11 @@
 		<div id="wrap">
 			<a id="top" name="top" accesskey="t"></a>
 			<div id="page-header">
-				<div class="navbar">
+				<div class="phpbb-navbar">
 					<div class="inner"><span class="corners-top"><span></span></span>
 		
 					<ul class="linklist navlinks">
-						<li class="icon-home"><a href="{U_INDEX}" accesskey="h">{L_INDEX}</a> <!-- BEGIN navlinks --> <strong>&#8249;</strong> <a href="{navlinks.U_VIEW_FORUM}">{navlinks.FORUM_NAME}</a><!-- END navlinks --></li>
+						<li class="phpbb-icon-home"><a href="{U_INDEX}" accesskey="h">{L_INDEX}</a> <!-- BEGIN navlinks --> <strong>&#8249;</strong> <a href="{navlinks.U_VIEW_FORUM}">{navlinks.FORUM_NAME}</a><!-- END navlinks --></li>
 
 						<!-- IF U_EMAIL_TOPIC --><li class="rightside"><a href="{U_EMAIL_TOPIC}" title="{L_EMAIL_TOPIC}" class="sendemail">{L_EMAIL_TOPIC}</a></li><!-- ENDIF -->
 						<!-- IF U_EMAIL_PM --><li class="rightside"><a href="{U_EMAIL_PM}" title="{L_EMAIL_PM}" class="sendemail">{L_EMAIL_PM}</a></li><!-- ENDIF -->
